--- a/src/components/Globalstyles/GlobalStyles.scss
+++ b/src/components/Globalstyles/GlobalStyles.scss
@@ -1,18 +1,27 @@
-@import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@400;600&family=Bree+Serif&family=Catamaran:wght@200&family=Josefin+Sans:wght@300;400&family=Karla:wght@200&family=Lilita+One&family=Montserrat&family=Open+Sans:wght@300;400;500&family=Pacifico&family=Pathway+Extreme&family=Poppins&family=Roboto&family=Rubik&family=Signika+Negative:wght@300&family=Signika:wght@300;500&family=Ysabeau:wght@600&display=swap');
-
+@import "normalize.css";
+@import url("https://fonts.googleapis.com/css2?family=Alkatra:wght@400;600&family=Bree+Serif&family=Catamaran:wght@200&family=Josefin+Sans:wght@300;400&family=Karla:wght@200&family=Lilita+One&family=Montserrat&family=Open+Sans:wght@300;400;500&family=Pacifico&family=Pathway+Extreme&family=Poppins&family=Roboto&family=Rubik&family=Signika+Negative:wght@300&family=Signika:wght@300;500&family=Ysabeau:wght@600&display=swap");
 
 :root {
-    --primary: #fe2c55;
+  --primary: #fe2c55;
+
+  // Default layout
+  --default-layout-header-height: 60px;
+  --default-layout-header-width: 1150px;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.6rem;
-    line-height: 1.5;
-    text-rendering: optimizeSpeed;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.6rem;
+  line-height: 1.5;
+  text-rendering: optimizeSpeed;
 }
