--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -21,6 +21,11 @@
 .logo {
 }
 
+.search,
+.search-result {
+  width: 361px;
+}
+
 .search {
   position: relative;
   width: 361px;
@@ -74,6 +79,13 @@
   &:active {
     background-color: rgba(22, 24, 35, 0.06);
   }
+}
+
+.search-title {
+  padding: 5px 12px;
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: #ccc;
 }
 
 .clear,
